# Spinning_cube

./: CMakeLists.txt  main.cpp
include/: defs.h  global.h  screen.h  vec3.h
src/: screen.cpp  vec3.cpp
